# quagga-ldpd

./: .gitignore  Dockerfile  configure.ac  daemons
ldpd/: Makefile.am  ldp.capnp  ldp_vty_conf.c  ldp_zebra.c  ldpd.c  ldpd.conf  ldpd.h  ldpd.ndef
lib/: Makefile.am  command.h  log.c  memtypes.c  mpls.h  qerr.c  qerr.h  qzc.c  qzc.capnp  qzc.h  qzmq.c  qzmq.h  route_types.txt  vty.c
m4/: .gitignore  ax_python23.m4
redhat/: README.rpm_build.md  quagga.spec.in
vtysh/: vtysh_config.c
zebra/: Makefile.am  connected.c  debug.c  debug.h  kernel_null.c  kernel_socket.c  main.c  rib.h  rt.h  rt_netlink.c  zebra.conf  zebra_mpls.c  zebra_mpls.h  zebra_mpls_netlink.c  zebra_mpls_null.c  zebra_rib.c  zebra_vty.c  zserv.c  zserv.h
